# double_slit

./: setup.cfg  setup.py
analysis/: analysis.ipynb  analysis_log_derivative.ipynb  prediction_real_data.ipynb
double_slit/: __init__.py  derivation.py  double_slit.py  prediction.py
example/: example.ipynb  example_pred_true_data.ipynb
test/: test_accuracy.py  test_first.py
