# -*- coding: utf-8 -*-

[metadata]
name = double_slit
fullname = Double slit 
version = 0.1.0
#url = https://github.com/al3xber/double_slit
author = Alexander Schütt
author_email = alexander.schuett@helmholtz-berlin.de
description = Numerical stable implentation of the intensity distribution of the double slit experiment 
#long_description = file: README.rst
classifiers =
	 Development Status :: 4 - Beta
         Intended Audience :: Science/Research
         License :: OSI Approved :: GNU General Public License (GPL)
         Programming Language :: Python :: 3
         Topic :: Scientific/Engineering :: Physics
[build-system]
requires = setup_tools


[options]
packages = find:
# install_requires = cython
requires = numpy scipy.special
# zip_safe = False
